--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,9 @@
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@mapbox/leaflet-omnivore": "^0.3.4",
     "@types/esri-leaflet": "^2.1.9",
+    "@types/leaflet-gpx": "^1.3.3",
+    "@types/leaflet-routing-machine": "^3.2.3",
+    "angular-geocoder": "^12.0.0",
     "angular-oauth2-oidc": "^13.0.1",
     "bootstrap": "^5.1.3",
     "esri-leaflet": "^3.0.4",
@@ -31,6 +34,7 @@
     "leaflet-filelayer": "^1.2.0",
     "leaflet-gpx": "^1.7.0",
     "leaflet-plugins": "^3.4.0",
+    "leaflet-routing-machine": "^3.2.12",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "togeojson": "^0.16.0",
@@ -41,6 +45,7 @@
     "@angular-devkit/build-angular": "~12.2.4",
     "@angular/cli": "~12.2.4",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.8.0",
     "@types/leaflet": "^1.7.8",
     "@types/node": "^12.11.1",
