--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -35,10 +35,7 @@
 
               "src/styles.css"
             ],
-            "scripts": [
-              "node_modules/jspdf/dist/jspdf.min.js",
-              "node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"
-          ]
+            "scripts": []
           },
           "configurations": {
             "production": {
