--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~12.2.0",
     "@asymmetrik/ngx-leaflet": "^8.1.0",
     "@mapbox/leaflet-omnivore": "^0.3.4",
+    "@sports-alliance/sports-lib": "^5.4.24",
     "@types/esri-leaflet": "^2.1.9",
     "@types/leaflet-gpx": "^1.3.3",
     "@types/leaflet-routing-machine": "^3.2.3",
@@ -29,12 +30,19 @@
     "angular-oauth2-oidc": "^13.0.1",
     "bootstrap": "^5.1.3",
     "esri-leaflet": "^3.0.4",
+    "faker": "^6.6.6",
+    "gps-to-gpx": "^1.5.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "leaflet": "^1.7.1",
     "leaflet-control-geocoder": "^2.3.0",
+    "leaflet-easyprint": "^2.1.9",
     "leaflet-filelayer": "^1.2.0",
     "leaflet-gpx": "^1.7.0",
     "leaflet-plugins": "^3.4.0",
     "leaflet-routing-machine": "^3.2.12",
+    "leaflet.browser.print": "^2.0.2",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.7",
     "togeojson": "^0.16.0",
@@ -47,6 +55,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.8.0",
+    "@types/jspdf": "^2.0.0",
     "@types/leaflet": "^1.7.8",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
